--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hws2",
-  "homepage": "c",
+  "homepage": "https://talismanchik.github.io/hws2",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
